101basic-resources/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: integrations
spec:
  type: ClusterIP   # 👈 only inside cluster
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
