101basic-resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: integrations
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080   # host-accessible port
